--- a/breastcancer.ipynb
+++ b/breastcancer.ipynb
@@ -151,7 +151,7 @@
     "    model.add(Dense(128, activation = 'relu'))\n",
     "    model.add(Dropout(0.4))\n",
     "\n",
-    "    model.add(Dense(2, activation = 'sigmoid')) #sigma bussin\n",
+    "    model.add(Dense(2, activation = 'sigmoid'))\n",
     "    model.compile(optimizer = 'adam', loss = 'binary_crossentropy', metrics=['accuracy'])\n",
     "# Train\n",
     "#You can also use generator to use augmentation during training.\n",
